[project]
name = "dagster-partition-demo"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "dagster",
    "dagster-pipes",
    "dagster-shared",
    "dagster-graphql",
    "dagster-webserver",
    "dagster-dbt",
    "httpx",
    "snowflake-connector-python",
]

[project.optional-dependencies]
dev = ["dagster-webserver"]

[tool.uv.sources]
dagster = { path = "/Users/tylerrouze/dev/dagster/python_modules/dagster", editable = true }
dagster-pipes = { path = "/Users/tylerrouze/dev/dagster/python_modules/dagster-pipes", editable = true }
dagster-shared = { path = "/Users/tylerrouze/dev/dagster/python_modules/libraries/dagster-shared", editable = true }
dagster-graphql = { path = "/Users/tylerrouze/dev/dagster/python_modules/dagster-graphql", editable = true }
dagster-webserver = { path = "/Users/tylerrouze/dev/dagster/python_modules/dagster-webserver", editable = true }
dagster-dbt = { path = "/Users/tylerrouze/dev/dagster/python_modules/libraries/dagster-dbt", editable = true }

[tool.dagster]
module_name = "dagster_dbt_cloud.definitions"
