[project]
name = "dagster-partition-demo"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "dagster",
    "dagster-pipes",
    "dagster-shared",
    "dagster-graphql",
    "dagster-webserver",
    "dagster-dbt",
    "httpx",
    "snowflake-connector-python",
]

[tool.dagster]
module_name = "dagster_dbt_cloud.definitions"

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "dagster_dbt_cloud"
